--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
 }
 
 @font-face {
+	font-family: Oswald;
+	src: url("fonts/Oswald-Regular.ttf");
+}
+
+@font-face {
+	font-family: Cabin-light;
+	src: url("fonts/Cabin-Medium.otf");
+}
+
+@font-face {
 	font-family: Trench;
 	src: url("fonts/trench.otf");
 }
@@ -19,12 +29,98 @@ html, body {
 }
 
 body {
-
+	display: flex;
+	flex-direction: column;
 }
 
-.menu-slider {
-	height: 100%;
+h1 {
+	font-family: Oswald;
+	text-align: center;
+	font-size: 40px;
 	width: 100%;
+}
+
+.image-container{
+	border: 8px solid #333;
+	width: 400px;
+	height: 400px;
+	max-height: 400px;
+	overflow: hidden;
+	position: relative;
+}
+
+img {
+	width: 100%;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	transition: all 150ms ease;
+}
+
+.image-mask{
+	background-color: rgba(100, 150, 200, 0.5);
+	opacity: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	transition: all 250ms ease;
+	z-index: 1;
+	cursor: default;
+}
+
+.image-mask:hover {
+	opacity: 1;
+}
+
+.image-mask:hover ~ img {
+	width: 110%;
+	left: -5%;
+	top: -5%;
+	cursor: pointer;
+}
+
+.image-mask h2 {
+	width: 100%;
+	margin-bottom: 50px;
+	background-color: rgba(255, 255, 130, 0.5);
+	padding: 10px 0;
+	transition: all 250ms ease;
+}
+
+.image-mask:hover > h2{
+	margin-bottom: 0px;
+}
+
+.image-mask p {
+	width: 100%;
+	left: -50px;
+	margin: 10px 0px;
+	background-color: rgba(170, 170, 70, 0.6);
+	padding: 20px 0px;
+}
+
+.image-mask button {
+	margin: 60px 0;
+	background-color: #111;
+	outline: none;
+	border: none;
+	width: 100px;
+	height: 40px;
+	color: #fafafa;
+	font-family: Oswald;
+	font-size: 15px;
+	transition: all 250ms ease;
+}
+
+.image-mask button:hover {
+	background-color: #000;
+	color: #fff;
+	cursor: pointer;
 }
 
 #slide-checker {
@@ -38,34 +134,43 @@ body {
 	margin: 10px;
 	border: 1px solid #333;
 	border-radius: 3px;
+	//transition: all 250ms cubic-bezier(0,.86,1,.48);
+	transition: all 250ms ease-in-out;
 }
 
 .menu {
-	background-color: #333;
+	background-color: #222;
 	width: 150px;
 	height: 100vh;
 	position: fixed;
 	left: -150px;
 	right: 0px;
+	//transition: all 250ms cubic-bezier(0,.86,1,.48);
+	transition: all 250ms ease-in-out;
 }
 
 .menu ul {
 	list-style: none;
 	padding-top: 30px;
+	//transition: all 250ms cubic-bezier(0,.86,1,.48);
+	transition: all 250ms ease-in-out;
 }
 
 .menu li {
 	padding: 10px 0px;
 	margin-left: 40px;
+	//transition: all 250ms cubic-bezier(0,.86,1,.48);
+	transition: all 250ms ease-in-out;
 }
 
 .menu a {
 	text-decoration: none;
-	text-align:left;
+	text-align: left;
 	font-family: trench;
-	font-weight: bold;
-	color: #999;
+	color: #bbb;
 	font-size: 18px;
+	//transition: all 250ms cubic-bezier(0,.86,1,.48);
+	transition: all 250ms ease-in-out;
 }
 
 .menu a:hover {
@@ -76,15 +181,45 @@ body {
 #slide-checker:checked ~ .menu {
 	width: 300px;
 	right: 150px;
-	transition: all 250ms ease-in-out;
 }
 
 #slide-checker:checked ~ .menu li {
 	margin-left: 190px;
-	transition: all 250ms ease-in-out;
 }
 
 #slide-checker:checked ~ .menu-icon {
 	left: 150px;
+}
+
+.main-body {
+	max-width: 100%;
+	padding: 30px 0px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-left: 0px;
+	width: 100%;
+	//background-image: url("images/CD.jpg");
+	//background: linear-gradient(to right, rgba(200, 250, 200 ,0.8), rgba(200, 255, 255, 0.8));
+	background-color: rgba(190,220,150,0.4);
+	//transition: all 250ms cubic-bezier(0,.86,1,.48);
 	transition: all 250ms ease-in-out;
+}
+
+.main-body > * {
+	margin-bottom: 40px;
+}
+
+.main-body > p {
+	width: 50%;
+	font-family: Cabin-light;
+	text-align: justify;
+	color: linear-gradient(to right, rgba(200, 255, 255, 1), rgba(200, 250, 200 ,1));;
+	transition: all 250ms ease-in-out;
+}
+
+#slide-checker:checked ~ .main-body {
+	width: 1136px;
+	margin-left: 150px;
 }
